<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_6813</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="186386042+LHY3015@users.noreply.github.com">lhy</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>rviz2</exec_depend>   
  <exec_depend>tf2_ros</exec_depend>  
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
